--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -5,7 +5,7 @@ logfile=/var/log/supervisor/supervisord.log
 childlogdir=/var/log/supervisor
 
 [program:php-fpm]
-command=php-fpm8.3 -F
+command=php-fpm -F
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -36,7 +36,7 @@ autorestart=true
 user=root
 
 [program:nextcloud-cron]
-command=/bin/bash -c 'sleep 60 && while true; do runuser -u www-data -- php /var/www/html/cron.php; sleep 300; done'
+command=/bin/bash -c 'sleep 60 && while true; do runuser -u www-data -c "php /var/www/html/cron.php"; sleep 300; done'
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
